# go-eController-API

./: README.md  apikeys-de.md  apikeys-en.md  cloudapi-de.md  cloudapi-en.md  http-de.md  http-en.md  introduction-de.md  introduction-en.md  modbus-de.md  modbus-en.md
.github/workflows/: checkdocs.yml
docshelper/: CMakeLists.txt  README.md  docshelper.pro  main.cpp
